@@ -192,6 +192,7 @@ listcontrol_selection_invalid			= {0} has an invalid selection that is set befor
 listcontrol_selectedindex_invalid		= {0}.SelectedIndex has an invalid value {1}.
 listcontrol_selectedvalue_invalid		= {0}.SelectedValue has an invalid value '{1}'.
 listcontrol_expression_invalid			= {0} is evaluating an invalid expression '{1}' : {2}
+listcontrol_multiselect_unsupported		= {0} does not support multiselection.
 
 label_associatedcontrol_invalid			= TLabel.AssociatedControl '{0}' cannot be found.
 
